--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="./Css/style.css?v=<? echo time(); ?>">
+    <link rel="stylesheet" href="./Css/style.css">
     <title>Home</title>
 </head>
 
@@ -147,6 +147,13 @@
             </div>
         </div>
     </div>
+
+    <div class="loading-container flex-box close">
+        <div class="loading">
+            <i class='bx bx-loader-circle'></i> 
+        </div>
+    </div>
+
     <script src="./JS/script.js"></script>
 </body>
 
