--- a/Home.html
+++ b/Home.html
@@ -18,8 +18,15 @@
     <link rel="stylesheet" href="./Css/style.css" />
     <title>Home</title>
   </head>
+  
 
   <body>
+    <script type="text/javascript">
+      (function() {
+        if(!sessionStorage.getItem("role")) //Ngăn chặn sự xâm nhập vào page khi chưa login
+          window.location.href = "http://localhost/demo_SQL_mini_project/"
+      })();
+    </script>
     <div class="view">
       <!-- header -->
       <div class="header">
@@ -40,17 +47,16 @@
             />
           </div>
           <div class="name-user">
-            <div class="name-user-text">Hena Sola</div>
+            <div class="name-user-text username-text"></div>
             <i class="icon-arrow-down bx bx-cog">
-              <div class="arrow-up close"></div>
-              <ul class="log-out close">
+              <ul class="setting-modal flex-box close">
                 <li class="item-drop-menu">
                   <i class="icon-drop-menu bx bxs-info-circle"></i>
-                  <span class="text-log-out"> Info </span>
+                  <div class="setting-item infor-btn"> Info </div>
                 </li>
                 <li class="item-drop-menu item-drop-menu-last">
                   <i class="icon-drop-menu bx bx bx-log-out"></i>
-                  <a href="./JS/script.js" class="text-log-out"> Log out </a>
+                  <div class="setting-item logout-btn"> Log out </div>
                 </li>
               </ul>
             </i>
@@ -66,7 +72,7 @@
         <!-- sidebar -->
         <div class="sidebar flex-box">
           <div class="head-sidebar flex-box">
-            <div class="name-sidebar close flex-box">John Wick</div>
+            <div class="name-sidebar close flex-box username-text"></div>
             <div class="sidebar-menu">
               <i class="icon-menu flex-box fa-solid fa-bars"></i>
             </div>
