--- a/Home.html
+++ b/Home.html
@@ -126,8 +126,13 @@
                 <i class="bx bx-search"></i>
               </div>
             </div>
-            <div id="table-config" class="table-config" data-config="add">
-              Configure Data!
+            <div class="config-area flex-box">
+              <div id="sub-config" class="table-config close" data-config="">
+                Check
+              </div>
+              <div id="table-config" class="table-config" data-config="add">
+                Configure Data
+              </div>
             </div>
           </div>
 
