--- a/Home.html
+++ b/Home.html
@@ -136,18 +136,19 @@
             </div>
           </div>
 
-          <div class="overview">Table Overview</div>
+          <div class="overview"></div>
           <div
             id="content-table"
             class="content-table"
             data-table="STUDENT"
           ></div>
 
-          <div class="config-modal-container close container flex-box">
+          <div class="config-modal-container container flex-box close">
             <div
               class="config-modal flex-box modal add-config"
               data-config="add-config"
-            ></div>
+            >             
+            </div>
           </div>
 
           <div class="config-modal-container close container flex-box small">
