update web events

--- a/Home.html
+++ b/Home.html
@@ -126,8 +126,10 @@
                 <i class="bx bx-search"></i>
               </div>
               <div class="another-tool-bar flex-box">
-                <div class="refresh-btn fl-2 flex-box">
-                  <i class="btn">Re</i>
+                <div class="sub-btn-container fl-2 flex-box">
+                  <i class="btn refresh-btn">Re</i>
+                  <i class="btn valid-TB-btn close note_obj"></i>
+                  
                 </div>
                 <div class="date-option-container fl-4 flex-box close">
                   <div class="input-field">
