--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@
       <!-- form -->
       <div class="form flex-box">
         <!-- image of left form-->
-        <img
-          src="../SQL/Assets/Image/image-form.png"
-          alt=""
-          class="image-form"
-        />
+        <img src="./Assets/Image/image-form.png" alt="" class="image-form" />
         <!-- login of right form -->
         <div class="form-login">
           <div class="form-login-title">Welcome</div>
           <div class="form-login-desc">Please login to your account</div>
           <form class="form-login-user">
             <div class="user-email">
-              <label for="username" class="user-tittle">Username or Email</label>
+              <label for="username" class="user-tittle"
+                >Username or Email</label
+              >
 
               <input type="text" name="name" id="username" class="username" />
             </div>
@@ -52,8 +50,7 @@
                 style="color: #bebebe"
               ></i>
             </div>
-            <div class="form-message error">
-            </div>
+            <div class="form-message error"></div>
             <div class="btn-form">
               <button id="submit-btn" class="submit">Login</button>
             </div>
