--- a/Dashboard.html
+++ b/Dashboard.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
     <link rel="stylesheet" href="./Css/style.css" />
-    <title>Home</title>
+    <title>Dashboard</title>
   </head>
 
   <body>
@@ -24,7 +24,7 @@
       (function () {
         if (!sessionStorage.getItem('role'))
           //Ngăn chặn sự xâm nhập vào page khi chưa login
-          window.location.href = window.location.href.replace('home.html', '');
+          window.location.href = 'https://qlttta.onrender.com/';
       })();
     </script>
     <div class="view">
